<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            style="@style/Card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_gravity="center"
            >
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/john_credit"
                    style="@style/Text.About"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/margin_small"
                    android:text="@string/john_credit" />

                <TextView
                    android:id="@+id/kyrsten_credit"
                    style="@style/Text.About"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/margin_small"
                    android:text="@string/kyrsten_credit" />


                <TextView
                    android:id="@+id/library"
                    style="@style/Text.About"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/margin_small"
                    android:text="@string/libraries_used" />

                <TextView
                    android:id="@+id/libraries_used"
                    style="@style/Text.About.Libraries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/libraries" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </ScrollView>

    <android.support.v7.widget.Toolbar
        android:theme="@style/ToolBarStyle"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary" >

        <TextView
            style="@style/ToolbarTitle"
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/apache"
        style="@style/Text.About"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:padding="@dimen/margin_small"
        android:text="@string/apache_license" />
</FrameLayout>